# seshat

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/skills/genai-review/: SKILL.md  tech-lead-prompt.md
.claude/skills/genai-review/reviewer-prompts/: devils-advocate.md  plan-quality-analyst.md  spec-quality-analyst.md
.claude/skills/plan-review/: SKILL.md
.claude/skills/spec-review/: SKILL.md
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_ops_schema.py  003_generated_documents.py  004_add_job_submission_fields.py  004_document_validation.py  005_publish_results.py
data/eval/: README.md
data/eval/corpora/grounding/: adversarial_001_prompt_injection.yaml  faithful_002_causal.yaml  faithful_003_synthesis.yaml  faithful_005_unanimity_rhetorical.yaml  hallucination_001_numbers.yaml  hallucination_003_causal_claim.yaml  hallucination_004_outcome.yaml  hallucination_005_absent_constraint.yaml
data/eval/corpora/identification/: boundary_003_risk_and_oq_coexist_compliance.yaml  boundary_005_oq_not_risk_no_consequence.yaml  boundary_006_risk_dedup_multiple_mentions.yaml  realistic_003_adversarial.yaml
data/eval/corpora/transcription/: new_service_2026_05_13_clean.yaml  new_service_2026_05_13_noisy.yaml
data/eval/corpus/grouping/: merge_001_same_kafka_adr.yaml  merge_002_policy_with_exception.yaml  mixed_001_action_item_non_default_type.yaml  mixed_002_kubernetes_and_release.yaml  realistic_001_api_platform_review.yaml  realistic_002_platform_sprint_review.yaml  singleton_001_unrelated_domains.yaml  singleton_002_adjacent_storage_layers.yaml
data/eval/corpus/identification/: 001_clean_extraction.yaml  002_decision_vs_proposal.yaml  007_zero_extractable.yaml  (+38 more)
data/fixtures/text/: arch_council_long_transcript.yaml  new_service_followup_2026_05_20.yaml
docker/: .env.docker.example  Dockerfile  Dockerfile.ui  localstack-init.sh
docs/: architecture.md  configuration.md  eval-user-guide.md  primer.md  seshat-sdd.md  ui-testing-guide.md
docs/superpowers/specs/: 2026-04-21-seshat-design.md  2026-04-22-genai-review-design.md  2026-05-27-meta-scorer-design.md  2026-06-17-reflective-agents.md  2026-06-27-manual-kb-endpoints.md
scripts/: resolution_same_cross_breakdown.py
src/seshat/agents/: README.md  base.py  grounding.py  verification.py
src/seshat/api/: app.py  auth.py  dependencies.py  state.py
src/seshat/blob_store/: __init__.py  factory.py  s3_store.py
src/seshat/cli/: __init__.py  _eval_support.py  app.py
src/seshat/config/: __init__.py  eval_settings.py  settings.py
src/seshat/eval/: README.md  __init__.py  bootstrap.py  cache.py  common.py  gate.py  mlflow_logging.py  models.py  thresholds.py
src/seshat/knowledge_store/: __init__.py  factory.py  pg_store.py
src/seshat/models/: api.py  api_graph.py  api_jobs.py  api_responses.py  base.py  enums.py  jobs.py  nodes.py  submission.py  transcript.py
src/seshat/observability/: __init__.py  latency_tracker.py  mlflow_metrics.py  mlflow_setup.py  usage_logger.py  usage_tracker.py
src/seshat/ops/: factory.py  ledger.py
src/seshat/pipeline/: bootstrap.py  llm_factory.py
src/seshat/secrets/: __init__.py  aws_resolver.py  base_resolver.py  env_resolver.py  factory.py
src/seshat/transcription/: factory.py
src/seshat/utils/: audio.py  db.py  retry.py
src/seshat/vector_store/: __init__.py  base_store.py  factory.py  pgvector_store.py
src/seshat/worker/: bootstrap.py  manual_ingestion.py  pipeline_runner.py  queue.py  writing_stage.py
src/seshat_ui/: api_client.py  app.py  pyproject.toml  utils.py
src/seshat_ui/screens/: admin.py  graph.py  jobs.py  manual_actions.py
tests/: helpers.py
tests/integration/: _probes.py  conftest.py  helpers.py
tests/integration/agents/: conftest.py  test_grounding_agent.py  test_reflective_agent.py
tests/integration/blob_store/: test_s3_blob_store.py
tests/integration/eval/: helpers.py  test_grounding_runner.py  test_grouping_runner.py  test_identification_runner.py  test_resolution_runner.py  test_retrieval_runner.py  test_transcription_runner.py  test_verification_runner.py
tests/integration/knowledge_store/: test_postgres_store.py
tests/integration/ops/: test_ops_ledger.py
tests/integration/secrets/: test_aws_resolver.py
tests/integration/vector_store/: test_pgvector_store.py
tests/integration/worker/: test_manual_ingestion.py
tests/unit/: conftest.py
tests/unit/agents/: test_base_agent.py  test_base_resolution.py  test_grounding.py  test_identification_registry.py  test_reflective_identification_agent.py  test_reflective_resolution_agent.py  test_resolution_registry.py
tests/unit/api/: conftest.py  test_auth.py  test_graph_router.py  test_health_router.py  test_jobs_router.py
tests/unit/blob_store/: test_factory.py  test_s3_store.py
tests/unit/cli/: test_app.py
tests/unit/config/: test_settings.py
tests/unit/eval/: conftest.py  test_cache.py  test_gate.py
tests/unit/knowledge_store/: test_factory.py  test_postgres_store.py
tests/unit/models/: test_api.py  test_nodes.py
tests/unit/observability/: test_latency_tracker.py  test_mlflow_metrics.py  test_usage_tracker.py
tests/unit/ops/: test_ops_ledger.py
tests/unit/pipeline/: test_llm_factory.py
tests/unit/secrets/: conftest.py  test_aws_resolver.py  test_env_resolver.py  test_factory.py
tests/unit/transcription/: test_factory.py
tests/unit/utils/: test_retry.py
tests/unit/vector_store/: conftest.py  test_factory.py  test_pgvector_store.py
tests/unit/worker/: test_manual_ingestion.py  test_pipeline_runner.py  test_queue.py  test_writing_stage.py
thesis/: references.bib  seshat.tex
thesis/chapters/: 01-introduccion.tex  02-estado-del-arte.tex  03-requisitos-diseno.tex  04-implementacion.tex  05-evaluacion.tex  anexos-despliegue.tex  anexos-tecnico.tex
thesis/figures/: identification_flow.drawio  job_lifecycle.drawio
(+295 files in other folders)
