[project]
name = "seshat"
version = "0.1.0"
description = "GenAI pipeline for structured meeting knowledge bases"
requires-python = ">=3.13"
dependencies = [
    # Async runtime
    "anyio>=4.14.2",
    # Data & persistence (Postgres, migrations, S3)
    "aiobotocore>=3.8.0",
    "alembic>=1.18.5",
    "asyncpg>=0.31",
    "boto3>=1.43",
    "langchain-postgres>=0.0.17",
    "psycopg[binary]>=3.3.4",
    # Config & validation
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    # AI / NLP
    # en_core_web_sm pinned as a direct URL so no manual download step is needed
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "spacy>=3.8",
    "langchain>=1.2",
    "langchain-anthropic>=1.5.0",
    "langchain-aws>=1.6.2",
    "langchain-openai>=1.4.0",
    "cohere>=7.0.7",
    "voyageai>=0.5.0",
    # Transcription
    "assemblyai>=0.64.31",
    "mutagen>=1.48.1",
    "pyyaml>=6.0",
    # Observability
    "mlflow[langchain]>=3.14.0",
    # API
    "bcrypt>=5.0",
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "python-multipart>=0.0.32",
    "truststore>=0.10.4",
]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "complexity" },
    "types-pyyaml>=6.0.12.20260518",
]
lint = [
    "boto3-stubs[secretsmanager]>=1.43.53",  # keep in sync with boto3
    "types-aiobotocore-s3>=3.8.0",          # keep in sync with aiobotocore
    "mypy>=2.3.0",
    "pre-commit>=4.6.1",
    "ruff>=0.15.22",
]
test = [
    "httpx>=0.28",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1",
    "python-dotenv>=1.0",
]
complexity = [
    "radon>=6.0",
]
cli = [
    "typer>=0.27.0",
]
eval = [
    { include-group = "cli" },
    "rapidfuzz>=3.14.5",
]

scripts = [
    { include-group = "audio" },
]
audio = [
    "elevenlabs>=2.58.0",
    "lameenc>=1.8.4",
    "miniaudio>=1.71",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/seshat"]

[project.scripts]
seshat = "seshat.cli:app"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle — PEP 8 style errors
    "F",     # pyflakes — undefined names, unused imports/variables
    "I",     # isort — import ordering
    "UP",    # pyupgrade — modernise syntax to the target Python version
    "B",     # flake8-bugbear — likely bugs and design issues
    "SIM",   # flake8-simplify — simplifiable code patterns
    "ASYNC", # flake8-async — blocking calls in async functions
    "FAST",  # FastAPI — route and dependency best practices
    "T20",   # flake8-print — ban print() in favour of logging
    "LOG",   # flake8-logging — logger instantiation patterns
    "G",     # flake8-logging-format — enforce % style in log calls
    "C4",    # flake8-comprehensions — unnecessary list/dict/set wrapping
    "TC",    # flake8-type-checking — move type-only imports under TYPE_CHECKING
    "PT",    # flake8-pytest-style — pytest idioms
    "RUF",   # Ruff-native — catch-all extras
]
ignore = [
    # PEP 695 type-parameter syntax (class Foo[T] / def f[T]) is incompatible
    # with `from __future__ import annotations`, which is required for forward
    # references in files that use Generic[T]. Suppressed until the codebase
    # can be migrated uniformly.
    "UP046",
    "UP047",
    # raise X from None in except-clause re-raises is stylistic noise in FastAPI handlers.
    "B904",
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.per-file-ignores]
# Agent files contain long LLM prompt strings that cannot be broken without
# backslash continuations, which are not semantically cleaner than long lines.
"src/seshat/app/agents/**" = ["E501"]
"tests/integration/app/agents/**" = ["E501"]
# FastAPI resolves annotations at runtime via get_type_hints(); TYPE_CHECKING-gated
# imports break dependency injection and response model resolution.
"src/seshat/app/platform/api/**" = ["TC001", "TC002", "TC003"]
# The truststore OS-truststore injection must run before boto3/botocore is imported
# anywhere in the process, so most of this module's imports are intentionally below it.
"src/seshat/app/platform/api/app.py" = ["E402"]
# Scripts are CLI tools — print() is intentional, and long string literals
# (sample scripts, argparse help text, noise profile prompts) cannot be split.
"scripts/**" = ["T201", "E501"]
# Thesis figure-generation helpers are standalone scripts, not application code.
"thesis/**" = ["T201", "E501"]

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = '--cov=src/seshat --cov-report=term-missing -m "not llm"'
filterwarnings = [
    # assemblyai SDK calls Pydantic's deprecated BaseModel.copy() internally; not fixable from our code.
    "ignore:The `copy` method is deprecated:pydantic.PydanticDeprecatedSince20",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
markers = [
    "integration: requires external services (Postgres, LocalStack, MLflow, LLM APIs, etc.)",
    "llm: requires a live LLM API key (any provider); subset of integration",
    "agents: requires a live LLM API key; subset of llm",
    "embedding: requires an embeddings API key; subset of llm",
    "transcription: requires a live transcription API key (AssemblyAI or OpenAI); subset of llm",
    "reranker: requires a live reranker API key (Cohere or Voyage); subset of llm",
    "eval: eval harness tests (unit and integration)",
]
testpaths = ["tests"]

[tool.coverage.report]
omit = [
    "src/seshat/eval/*/entrypoint.py",
    "src/seshat/eval/calibration/*_entrypoint.py",
    "src/seshat/app/pipeline/bootstrap.py",
    "src/seshat_ui/*",
]
